# server/storage/storage_interface.go
@@ -2,6 +2,7 @@ package storage
 
 import (
 	"context"
+
 	sprinklesv1 "github.com/catalystcommunity/sprinkles/protos/gen/go/sprinkles/v1"
 )
 
@@ -15,4 +16,14 @@ type StorageInterface interface {
 	ListHellos(ctx context.Context, request *sprinklesv1.ListRequest) ([]*sprinklesv1.Hello, error)
 	GetHellos(ctx context.Context, request *sprinklesv1.GetRequest) ([]*sprinklesv1.Hello, error)
 	GetHello(ctx context.Context, id string) (*sprinklesv1.Hello, error)
+	GetOptionDefinitions(ctx context.Context, request *sprinklesv1.GetRequest) ([]*sprinklesv1.OptionDefinition, error)
+	ListOptionDefinitions(ctx context.Context, request *sprinklesv1.ListRequest) ([]*sprinklesv1.OptionDefinition, error)
+	DeleteOptionDefinitions(ctx context.Context, ids []string) error
+	UpsertOptionDefinitions(ctx context.Context, request *sprinklesv1.UpsertOptionDefinitionsRequest) ([]*sprinklesv1.OptionDefinition, error)
+	GetOptionOverrides(ctx context.Context, request *sprinklesv1.GetRequest) ([]*sprinklesv1.OptionOverride, error)
+	ListOptionOverrides(ctx context.Context, request *sprinklesv1.ListRequest) ([]*sprinklesv1.OptionOverride, error)
+	DeleteOptionOverrides(ctx context.Context, ids []string) error
+	UpsertOptionOverrides(ctx context.Context, request *sprinklesv1.UpsertOptionOverridesRequest) ([]*sprinklesv1.OptionOverride, error)
+	GetOptionsByGroup(ctx context.Context, request *sprinklesv1.OptionGroupRequest) ([]*sprinklesv1.OptionOverride, error)
+	GetOptionValue(ctx context.Context, request *sprinklesv1.OptionValueRequest) (*sprinklesv1.OptionValueResponse, error)
 }
